8265218: trace_method_handle_stub fails to find calling frame on x86